<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <!-- Search bar -->
    <EditText
        android:id="@+id/searchField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/searching_for_member"
        android:drawableStart="@drawable/icon_search"
        android:drawablePadding="8dp"
        android:padding="12dp"
        android:background="@drawable/button_19_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp" />
    <!-- Member list -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/memberRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/parent_button_interact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchField" />

    <LinearLayout
        android:id="@+id/parent_button_interact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memberRecyclerView">
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
