<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/image_background_password"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/navigationBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border_radius_bottom_left_right"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/icon_back"
            android:layout_width="40dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/icon_arrow_back" />

        <TextView
            android:layout_marginLeft="35dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold|italic"
            android:text="@string/thu_duc_collage"
            android:textColor="#fff"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textTitleForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password_text"
        android:layout_marginVertical="50dp"
        android:textColor="@color/defaultBlue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/navigationBar" />

    <LinearLayout
        android:id="@+id/parent_old_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/border_radius_field"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitleForgotPassword">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/circle_logo"
            android:scaleX="0.8"
            android:scaleY="0.7"
            android:src="@drawable/icon_password" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/line_custom_login" />

        <EditText
            android:id="@+id/editTextOldPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:textSize="15sp"
            android:background="@drawable/border_radius_field"
            android:hint="@string/old_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/parent_new_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_radius_field"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_old_password">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/circle_logo"
            android:scaleX="0.8"
            android:scaleY="0.7"
            android:src="@drawable/icon_password" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/line_custom_login" />

        <EditText
            android:id="@+id/editTextNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/border_radius_field"
            android:hint="@string/new_password"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/parent_new_password_confirm"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_radius_field"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_new_password">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/circle_logo"
            android:scaleX="0.8"
            android:scaleY="0.7"
            android:src="@drawable/icon_password" />

        <ImageView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@drawable/line_custom_login" />

        <EditText
            android:id="@+id/editTextConfirmNewPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/border_radius_field"
            android:textSize="15sp"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword" />
    </LinearLayout>
    <Button
        android:id="@+id/button_summit_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/defaultBlue"
        android:paddingHorizontal="40dp"
        android:text="@string/confirm"
        android:textColor="#fff"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/parent_new_password_confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>